# xlight-autosequencer

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: pre-mortem.md
.devcontainer/: Dockerfile  devcontainer.json  xlights-check.sh  xlights-render.sh
.github/workflows/: evaluate.yml  screenshots-on-pr.yml
.wolf/: OPENWOLF.md  STATUS.md  anatomy-index.json  anatomy.md  buglog.json  cerebrum.md  config.json  reframe-frameworks.md
.wolf/hooks/: _session.json
docs/: README.md  algorithm-categories.md  algorithms.md  architecture-overview.md  cache-audit-2026-04-26.md  data-structures.md  export-formats.md  hierarchy.md  iteration-backlog.md  known-broken-tests.md  musical-analysis-design.md  pipeline.md  quality-scoring.md  quickstart-tutorial.md  quickstart.md  reference-sequence-analysis.md  review-ui.md  section-confidence-snap-to-cluster-2026-04.md  segment-classification-changelog.md  stem-separation.md  sweep-system.md  timbre-dissonance-integration.md  troubleshooting.md  unaddressed-review-items.md
openspec/changes/: _design.css
packaging/: README.md
packaging/pyinstaller/: backend.spec
packaging/scripts/: build-app.sh  build-backend.sh  fetch-vamp-plugins.sh  notarize.sh  release.sh  sign-backend.sh
packaging/tauri/: package.json
packaging/tauri/src-tauri/: Cargo.toml  entitlements.plist  packaging-manifest.json  tauri.conf.json
packaging/tauri/src-tauri/capabilities/: main.json
packaging/tauri/src-tauri/icons/: icon.icns
packaging/tauri/src-tauri/src/: handshake.rs  main.rs
scripts/: analyze_reference_xsq.py  boundary_confidence_map.py  build-frontend.sh  compare_genius_sections.py  consolidate_direction_variants.py  install.sh  library_fidelity.py  mine_arch_corpus.py  mine_prop_corpus.py  render_compare_mp4.sh  sidebyside_mp4.sh  start.sh
specs/005-vamp-parameter-tuning/: spec.md
specs/013-genius-lyric-segments/: data-model.md  quickstart.md  spec.md
specs/020-sequence-generator/: data-model.md  plan.md
specs/027-unified-dashboard/: plan.md  quickstart.md
specs/028-effects-variant-library/: research.md  spec.md  tasks.md
specs/031-effect-variant-ui-wiring/: data-model.md  research.md  spec.md  tasks.md
specs/032-section-transitions-fadeout/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/035-sequence-quality-refinement/: spec.md
specs/036-focused-effects-repetition/: baseline_metrics.txt  plan.md  quickstart.md  spec.md  tasks.md
specs/038-palette-restraint/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/051-x-onset-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/052-tauri-desktop-packaging/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: cache.py  cli.py  cli_old.py  generator_wizard.py  library.py  settings.py  wizard.py
src/analyzer/: __init__.py  _compat.py  capabilities.py  conditioning.py  crash_accents.py  drum_classifier.py  genius_segments.py  interaction.py  orchestrator.py  phoneme_align.py  pipeline.py  result.py  runner.py  self_similarity.py  stem_inspector.py  stems.py  structure.py  sweep.py  synced_lyrics.py  vamp_params.py  vamp_runner.py  xtiming.py  xvc_export.py
src/cli/: __init__.py  analyze.py  evaluate.py  extras.py  helpers.py  library.py  review.py  scoring.py
src/effects/: builtin_effects.json
src/evaluation/: acceptance_gate.py  analyzer_baseline.py  corpus_resolver.py  generator_runner.py  models.py  section_fidelity.py  xsq_reader.py
src/generator/: __init__.py  chord_colors.py  corpus_recipes.py  effect_placer.py  energy.py  models.py  plan.py  rotation.py  theme_selector.py  transitions.py  value_curves.py  video_prep.py  xsq_writer.py
src/grouper/: classifier.py  grouper.py  layout.py  writer.py
src/microscope/: runner.py  sensitivity.py
src/packaging/: __init__.py  bundled_mode.py  model_manifest.json  models_paths.py  stems_paths.py  weights_downloader.py
src/review/: bundled_entrypoint.py  cli.py  generate_routes.py  server.py  story_routes.py  variant_routes.py
src/story/: builder.py  models.py  section_classifier.py  section_profiler.py  stem_curves.py
src/themes/: builtin_themes.json  library.py  models.py  validator.py
src/validation/: __init__.py  baseline.py  report.py  scenarios.py  scorers.py
src/variants/: importer.py  library.py  models.py  scorer.py  validator.py
src/video/: layout.py  renderer.py
tests/: test_analyzer_compat.py
tests/evaluation/: test_analyzer_baseline.py  test_coverage_metric.py  test_gate_cli.py  test_generator_runner.py  test_xsq_reader_layout_models.py
tests/integration/: test_generate_integration.py  test_generate_with_curves.py  test_grouper_integration.py  test_orchestrator_ssm.py  test_palette_restraint.py  test_phase1_metrics.py  test_pipeline.py  test_radial_effect.py  test_sequence_generation.py  test_story_builder_refinement.py  test_sweep_integration.py  test_theme_variant_picker.py  test_transitions_integration.py  test_variant_api_browse.py  test_variant_api_crud.py  test_variant_import.py  test_variant_query.py  test_variant_theme_integration.py
tests/ui/: README.md  (+1 more)
(+620 files in other folders)
