[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xlight-autosequencer"
version = "0.1.0"
description = "Automatically generate xLights sequences from audio files"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "librosa>=0.10",
    "click>=8.0",
    "numpy>=1.24,<2",
    "scipy>=1.11",
    "soundfile>=0.12",
    "flask>=3.0",
    "questionary>=2.0",
    "rich>=13.0",
    "mutagen>=1.47",
]

[project.scripts]
xlight-analyze = "src.cli:cli"
xlight-evaluate = "src.cli.evaluate:main"
xlight-review = "src.review.cli:main"

[project.optional-dependencies]
# madmom requires Python <=3.9 and numpy<2; install separately if compatible
madmom = ["madmom>=0.16"]
# vamp requires the Vamp host SDK C++ headers; install separately after SDK setup
vamp = ["vamp>=1.1"]
# demucs for stem separation (htdemucs_6s model)
stems = ["demucs>=4.0"]
# whisperx for vocal phoneme analysis (--phonemes flag).
# matplotlib is pulled in by pyannote.audio 3.3.2 at import time
# (pyannote/audio/tasks/segmentation/mixins.py) even when unused.
phonemes = ["whisperx>=3.1", "nltk>=3.8", "matplotlib>=3.5"]
# Install everything: pip install -e ".[all]"
all = [
    "demucs>=4.0",
    "vamp>=1.1",
    "whisperx>=3.1",
    "nltk>=3.8",
    "lyricsgenius>=3.0",
    "mutagen>=1.47",
    "matplotlib>=3.5",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.2",
    "pyinstaller>=6,<7",
    "requests>=2.31",
]
# Install the UI flow regression suite: pip install -e ".[ui-tests]"
ui-tests = [
    "playwright>=1.48",
    "pytest-playwright>=0.5",
    "pytest-rerunfailures>=14.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:madmom",
    "ignore::UserWarning:librosa",
    "ignore::FutureWarning:librosa",
]
markers = [
    "vamp: marks tests requiring Vamp plugins (skipped if plugins not installed)",
    "slow: marks tests that take more than 10 seconds",
    "capture_only: one-shot golden capture helpers; skipped by default",
    "ui: marks browser-driven UI flow tests (requires pip install -e '.[ui-tests]' + npm run build). Skipped by default; select with `-m ui` or via `xlight-evaluate gate`.",
    "content: marks UI tests that trigger the real analyzer pipeline and assert the displayed content matches the manifest. Slower but catches backend→UI data-plumbing regressions. Select with `-m content` or `-m 'ui and content'`.",
]
# Skip capture_only and ui tests unless explicitly selected.
# UI flows require Playwright + a built frontend (npm run build) and are slow;
# the acceptance gate (`xlight-evaluate gate`) opts them in via `pytest -m ui`.
addopts = "-m 'not capture_only and not ui'"
